{
  "version": 4,
  "terraform_version": "0.12.7",
  "serial": 615,
  "lineage": "22f941d4-a3b5-ccd6-4673-26f488539f8d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "main_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:515737041115:subnet/subnet-bfbb0ff7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.31.32.0/20",
            "id": "subnet-bfbb0ff7",
            "map_public_ip_on_launch": true,
            "owner_id": "515737041115",
            "tags": {
              "Name": "Main"
            },
            "vpc_id": "vpc-4d5f1e2b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "main_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:515737041115:subnet/subnet-bbf96edd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.31.16.0/20",
            "id": "subnet-bbf96edd",
            "map_public_ip_on_launch": true,
            "owner_id": "515737041115",
            "tags": {
              "Name": "Main"
            },
            "vpc_id": "vpc-4d5f1e2b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:515737041115:vpc/vpc-4d5f1e2b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-709e7909",
            "default_route_table_id": "rtb-966bdfef",
            "default_security_group_id": "sg-14da5d69",
            "dhcp_options_id": "dopt-d41f90b2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-4d5f1e2b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-966bdfef",
            "owner_id": "515737041115",
            "tags": {
              "Name": "Default VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0135f076a31aebe66",
            "arn": "arn:aws:ec2:us-west-2:515737041115:instance/i-0bae001a89ef03bd0",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0bae001a89ef03bd0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0525663392f8eb89f",
            "private_dns": "ip-172-31-42-28.us-west-2.compute.internal",
            "private_ip": "172.31.42.28",
            "public_dns": "ec2-35-165-82-201.us-west-2.compute.amazonaws.com",
            "public_ip": "35.165.82.201",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0cb1d3cd94d2e2295",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terratest-http-example-sPo1En"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bfbb0ff7",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-091ffc6aeb47fea36"
            ]
          },
          "depends_on": [
            "aws_security_group.example",
            "data.aws_ami.ubuntu",
            "data.template_file.user_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "load_balancer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:515737041115:loadbalancer/app/somename/ef5765013a3e3a4c",
            "arn_suffix": "app/somename/ef5765013a3e3a4c",
            "dns_name": "somename-13047641.us-west-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:515737041115:loadbalancer/app/somename/ef5765013a3e3a4c",
            "idle_timeout": 300,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "somename",
            "security_groups": [
              "sg-0e86cc2dcd8436d29"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-bbf96edd"
              },
              {
                "subnet_id": "subnet-bfbb0ff7"
              }
            ],
            "subnets": [
              "subnet-bbf96edd",
              "subnet-bfbb0ff7"
            ],
            "tags": {
              "Account": "someaccount",
              "Environment": "someenv",
              "Managed": "terraform",
              "Name": "somename-someenv",
              "Region": "us-west-2"
            },
            "vpc_id": "vpc-4d5f1e2b",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "depends_on": [
            "aws_default_subnet.main_a",
            "aws_default_subnet.main_b",
            "aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:515737041115:listener/app/somename/ef5765013a3e3a4c/8f1bf062ea6cf2fb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:515737041115:targetgroup/somename/6ffd893b96d350af",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:515737041115:listener/app/somename/ef5765013a3e3a4c/8f1bf062ea6cf2fb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:515737041115:loadbalancer/app/somename/ef5765013a3e3a4c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.load_balancer",
            "aws_lb_target_group.target"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "access_restricted",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Access is retricted.",
                    "status_code": "403"
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:515737041115:listener-rule/app/somename/ef5765013a3e3a4c/8f1bf062ea6cf2fb/264d3d0c63056ed2",
            "condition": [
              {
                "field": "path-pattern",
                "values": [
                  "/close-url"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:515737041115:listener-rule/app/somename/ef5765013a3e3a4c/8f1bf062ea6cf2fb/264d3d0c63056ed2",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:515737041115:listener/app/somename/ef5765013a3e3a4c/8f1bf062ea6cf2fb",
            "priority": 101
          },
          "depends_on": [
            "aws_lb_listener.http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "behind_vpn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:515737041115:targetgroup/somename/6ffd893b96d350af",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:515737041115:listener-rule/app/somename/ef5765013a3e3a4c/8f1bf062ea6cf2fb/73d6cb2a4808074a",
            "condition": [
              {
                "field": "path-pattern",
                "values": [
                  "dummy"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:515737041115:listener-rule/app/somename/ef5765013a3e3a4c/8f1bf062ea6cf2fb/73d6cb2a4808074a",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:515737041115:listener/app/somename/ef5765013a3e3a4c/8f1bf062ea6cf2fb",
            "priority": 100
          },
          "depends_on": [
            "aws_lb_listener.http",
            "aws_lb_target_group.target"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "four_o_four",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Url not found on server.",
                    "status_code": "404"
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:515737041115:listener-rule/app/somename/ef5765013a3e3a4c/8f1bf062ea6cf2fb/a8ffff845be39af9",
            "condition": [
              {
                "field": "path-pattern",
                "values": [
                  "/404-url"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:515737041115:listener-rule/app/somename/ef5765013a3e3a4c/8f1bf062ea6cf2fb/a8ffff845be39af9",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:515737041115:listener/app/somename/ef5765013a3e3a4c/8f1bf062ea6cf2fb",
            "priority": 50
          },
          "depends_on": [
            "aws_lb_listener.http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "open",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "I am open for new opportunities here.",
                    "status_code": "200"
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:515737041115:listener-rule/app/somename/ef5765013a3e3a4c/8f1bf062ea6cf2fb/6e2a684d045916bf",
            "condition": [
              {
                "field": "path-pattern",
                "values": [
                  "/open-url"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:515737041115:listener-rule/app/somename/ef5765013a3e3a4c/8f1bf062ea6cf2fb/6e2a684d045916bf",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:515737041115:listener/app/somename/ef5765013a3e3a4c/8f1bf062ea6cf2fb",
            "priority": 1
          },
          "depends_on": [
            "aws_lb_listener.http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:515737041115:targetgroup/somename/6ffd893b96d350af",
            "arn_suffix": "targetgroup/somename/6ffd893b96d350af",
            "deregistration_delay": 5,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:515737041115:targetgroup/somename/6ffd893b96d350af",
            "lambda_multi_value_headers_enabled": false,
            "name": "somename",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-4d5f1e2b"
          },
          "depends_on": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:515737041115:targetgroup/somename/6ffd893b96d350af-20190903102701486800000001",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:515737041115:targetgroup/somename/6ffd893b96d350af",
            "target_id": "i-0bae001a89ef03bd0"
          },
          "depends_on": [
            "aws_instance.example",
            "aws_lb_target_group.target"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:515737041115:security-group/sg-091ffc6aeb47fea36",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-091ffc6aeb47fea36",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terratest-http-example-sPo1En",
            "name_prefix": null,
            "owner_id": "515737041115",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-4d5f1e2b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:515737041115:security-group/sg-0e86cc2dcd8436d29",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e86cc2dcd8436d29",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "somename",
            "name_prefix": null,
            "owner_id": "515737041115",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-4d5f1e2b"
          }
        }
      ]
    }
  ]
}